--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cd frontend && next dev --turbopack -p 9002",
+    "dev": "cd frontend && next dev --turbopack --port 9000 --hostname 0.0.0.0",
     "genkit:dev": "cd frontend && genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "cd frontend && genkit start -- tsx --watch src/ai/dev.ts",
     "build": "cd frontend && next build",
