--- a/.github/workflows/dockerhub-simple.yml
+++ b/.github/workflows/dockerhub-simple.yml
@@ -96,6 +96,8 @@ jobs:
             ${{ env.FRONTEND_IMAGE }}:build-${{ github.run_number }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            DOCKER_BUILD=true
 
       - name: Test Frontend Image
         run: |
