--- a/docker-compose.dockerhub.yml
+++ b/docker-compose.dockerhub.yml
@@ -36,7 +36,8 @@ services:
     networks:
       - saascontrol-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/api/health", "||", "exit", "1"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/api/health"]
+      # Removed || exit 1 as it's redundant in test array format
       interval: 30s
       timeout: 10s
       retries: 3
@@ -72,7 +73,7 @@ services:
     networks:
       - saascontrol-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health", "||", "exit", "1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -106,7 +107,7 @@ services:
     networks:
       - saascontrol-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8100/health", "||", "exit", "1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8100/health"]
       interval: 30s
       timeout: 10s
       retries: 3
